<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="vn.home.htm.tripdemo.screen.weather.SettingUnitWeather.SettingUnitWeatherViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:background="@color/color_gray_dark"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp42"
                android:background="@android:color/black"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp38"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ic_con1"
                        android:layout_width="@dimen/dp32"
                        android:layout_height="@dimen/dp32"
                        android:layout_marginTop="@dimen/dp2"
                        android:src="@drawable/icon_temp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_toRightOf="@id/ic_con1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_temperature"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <RadioGroup
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:background="@drawable/pink_out_line"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:checked="@{viewModel.isTemperatureF}"
                            android:gravity="center"
                            android:text="@string/set_f" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:checked="@{!viewModel.isTemperatureF}"
                            android:gravity="center"
                            android:text="@string/set_c" />
                    </RadioGroup>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp38"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ic_con2"
                        android:layout_width="@dimen/dp32"
                        android:layout_height="@dimen/dp32"
                        android:layout_marginTop="@dimen/dp2"
                        android:src="@drawable/icon_time" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_toRightOf="@id/ic_con2"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_time"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>


                    <RadioGroup
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:background="@drawable/pink_out_line"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:checked="@{viewModel.isTimeA}"
                            android:gravity="center"
                            android:text="@string/set_12" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_widget_background"
                            android:button="@null"
                            android:checked="@{!viewModel.isTimeA}"
                            android:gravity="center"
                            android:text="@string/set_24" />
                    </RadioGroup>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp38"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ic_con3"
                        android:layout_width="@dimen/dp32"
                        android:layout_height="@dimen/dp32"
                        android:layout_marginTop="@dimen/dp2"
                        android:src="@drawable/icon_wind" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_toRightOf="@id/ic_con3"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_wind_speed"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/unit_wind"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp38"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ic_con4"
                        android:layout_width="@dimen/dp32"
                        android:layout_height="@dimen/dp32"
                        android:layout_marginTop="@dimen/dp2"
                        android:src="@drawable/icon_notification" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_toRightOf="@id/ic_con4"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_notification"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>


                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:checked="@{viewModel.isNotification}"

                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp38"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ic_con5"
                        android:layout_width="@dimen/dp32"
                        android:layout_height="@dimen/dp32"
                        android:layout_marginTop="@dimen/dp2"
                        android:src="@drawable/icon_status" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_toRightOf="@id/ic_con5"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_status"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/white" />
                    </LinearLayout>


                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:checked="@{viewModel.isStatus}"

                        android:textColor="@android:color/white" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_jump"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/bg_button_gray_coner"
                android:onClick="@{()->viewModel.listenerDone()}"
                android:text="@string/done"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
